# observer

./: .gitignore  CLAUDE.md  Makefile  README.md  brand.py  doctor.py  eval_runner.py  pyproject.toml  requirements.txt  setup.py  setup.sh
configs/: eval_config.py  eval_config.yaml
docs/: 00_PRINCIPLES.md  10_ARCHITECTURE.md  20_INTEGRATION_CONTRACT.md  21_ADAPTER_GUIDE.md  22_EXTERNAL_LOGGER_HANDOFF.md  23_ENV_INSTRUMENTATION.md  30_METRICS_REFERENCE.md  31_CHECKPOINT_RANKING.md  INTEGRATION.md  INTRO_KO.md  observer_guide.html
docs/_internal/hand_expert/: hand_expert.md
docs/adapters/: hand_expert.md  sharpa.md
docs/ko/: 01_INTRO.md  02_TESTING_GUIDE.md  README.md
docs/ko/adapters/: hand_expert.md
io/: result_locator.py
isaac/: camera_controller.py  recorder.py
observer/: __init__.py  eval_runner.py
observer/configs/: __init__.py
observer/isaac/: __init__.py  recorder.py
observer/pipeline/: __init__.py  auto_select.py  orchestrator.py  result_locator.py  utils.py
observer/viz/: __init__.py
pipeline/: auto_select.py  experiment_tracker.py  failure_classifier.py  metrics_collector.py  orchestrator.py  report_generator.py  result_locator.py  state_coverage.py
report/: report_generator.py
scripts/: setup.sh
tactile/: overlay.py
viz/: tactile_overlay.py
